2011-05-10  NIIBE Yutaka  <gniibe@fsij.org>

	Bug fixes.
	* src/openpgp.c (cmd_reset_user_password, cmd_change_password)
	* src/openpgp-do.c (proc_resetting_code): Fix check of return value.
	* src/ac.c (ac_fini): Clear keystring_md_pw3.

	Prevent observation of PW3 is emptiness by PW3's error counter.
	Support verify_admin by PW1 when PW3 is empty.
	* src/ac.c (admin_authorized): New.
	(verify_admin_0): Set admin_authorized.

	* src/openpgp-do.c (proc_resetting_code): Use admin_authorized.
	(gpg_do_write_prvkey): Clear dek_encrypted_3 when keystring_admin
	is NULL.
	(proc_key_import): Checking admin_authorized, set keystring_admin.
	* src/openpgp.c (cmd_reset_user_password): Use admin_authorized.

2011-04-18  NIIBE Yutaka  <gniibe@fsij.org>

	* gnuk.svg: Updated.

2011-04-15  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.11.

	* src/usb_prop.c (gnukStringSerial): Updated.

2011-04-11  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/dfuse.py (DFU_STM32.verify): support data size of non-1-KiB.

2011-02-24  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_prop.c (gnuk_device_SetInterface): Fix argument to
	ClearDTOG_TX.

2011-02-10  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.10.

	* src/configure, src/Makefile.in (BOARD_DIR): New.

	* boards/CQ_STARM/board.mk, boards/OLIMEX_STM32_H103/board.mk:
	Removed.
	* boards/STBEE/board.mk, boards/STBEE_MINI/board.mk: Removed.
	* boards/STM32_PRIMER2/board.mk, boards/STM8S_DISCOVERY/board.mk:
	Removed.

	* src/Makefile.in (OUTFILES): Don't include random_bits.

2011-02-09  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_prop.c (gnukStringSerial): Updated.

	* tool/gnuk_put_binary.py (gnuk_token.__del__): Removed.
	Releasing the interface is done in PyUSB.

	* tool/dfuse.py (DFU_STM32.__del__): Removed.

	* src/openpgp.c (cmd_write_binary): Support random bits and card
	holder certificate as well.

	* src/openpgp-do.c (do_openpgpcard_aid): Add volatile to prevent
	compiler optimization to access AID.
